--- a/index.html
+++ b/index.html
@@ -2,47 +2,25 @@
 <html lang="en">
 
 <head>
+    <!-- Metadatos -->
     <meta charset="UTF-8" />
+    <meta name="author" content="Nelson Ortiz">
+    <meta name="description" content="Portafolio creado como proyecto final de curso de bootstrap">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Bootstrap, React">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <!-- favicon -->
+     <link rel="icon" href="image/favicon.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-
-    <title>Aprendiendo BootStrap 5</title>
-
-
-    <style>
-        .row {
-            background-color: orange;
-            border: 3px solid rgb(110,73,5);
-            padding: 5px;
-            margin: 10px;
-        }
-
-        .col{
-            background: red;
-            font-size: 50px;
-            color: white;
-            border: 2px solid black
-        }
-    </style>
+    <!-- Bootstrap Icon -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- Titulo -->
+    <title>Portafolio - Proyecto de Bootstrap</title>
 </head>
 
 <body>
-    <div class="container text-center">
-        <div class="row">
-            <div class="col">Columna 1</div>
-            <div class="col">Columna 2</div>
-        </div>
-        <div class="row">
-            <div class="col">Columna 1</div>
-            <div class="col">Columna 2</div>
-            <div class="col">Columna 3</div>
-        </div>
-    </div>
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
